--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="pop_layer">
-        <header> 나의 메모 KKKKK </header>
+        <header> 나의 메모 KKKKKK </header>
         <main>
             <form action="http://localhost:3000/" method="post">
                 <div><label for="name" class="label1">작성자:</label> <input type="text" id="name" name="name" class="input1"/></div>
